# PhotonLibOS

./: .alimake_var  .alimakerc  .gitignore  .gitmodules  .reporoot  CMakeLists.txt  Magfile.yaml  README.md  TARGETS  build.sh  photon.cpp  photon.h
CMake/: Finde2fs.cmake  Finduring.cmake  pack.cmake
common/: PMF.h  alog-audit.h  alog-functionptr.h  alog-stdstring.h  alog.cpp  alog.h  alog.md  async.h  async_stream.h  callback.h  callback.md  consistent-hash-map.h  conststr.h  enumerable.h  estring.cpp  estring.h  event-loop.cpp  event-loop.h  expirecontainer.cpp  expirecontainer.h  generator.h  identity-pool.cpp  identity-pool.h  identity-pool.md  io-alloc.h  iovector.cpp  iovector.h  iovector.md  lockfree.h  lockfree_queue.h  message-channel.h  message.h  object.h  perf_counter.cpp  perf_counter.h  range-lock.h  ring.cpp  ring.h  ring.md  stream.h  (+9 more)
common/checksum/: crc32c.cpp  crc32c.h
common/checksum/test/: CMakeLists.txt  TARGETS  test_checksum.cpp
common/executor/: easylock.h  executor.cpp  executor.h  stdlock.h
common/executor/test/: TARGETS  test_async.cpp  test_easy.cpp  test_easyexport.cpp  test_photon.cpp  test_std.cpp
common/memory-stream/: memory-stream.cpp  memory-stream.h
common/memory-stream/test/: TARGETS  test.cpp
common/metric-meter/: metrics.h
common/metric-meter/test/: TARGETS  example.cpp
common/stream-messenger/: messenger.cpp  messenger.h
common/stream-messenger/test/: TARGETS  test.cpp
common/test/: CMakeLists.txt  TARGETS  benchfs.cpp  test.cpp  test_alog.cpp  test_constexprstr.cpp  test_lockfree.cpp  test_objcache.cpp  test_scalepool.cpp  test_throttle.cpp
doc/: thread-local.md  编码原则.md
examples/: CMakeLists.txt  TARGETS
examples/fstack-dpdk/: fstack-dpdk-demo.cpp
examples/perf/: net-perf.cpp
examples/rpc/: server.cpp
examples/simple/: simple.cpp
examples/sync-primitive/: sync-primitive.cpp
fs/: aligned-file.cpp  aligned-file.h  async_filesystem.cpp  async_filesystem.h  exportfs.cpp  exportfs.h  fiemap.h  filecopy.cpp  filecopy.h  filesystem.h  forwardfs.h  fuse_adaptor.cpp  fuse_adaptor.h  localfs.cpp  localfs.h  path.cpp  path.h  range-split-vi.h  range-split.h  range-split.md  subfs.cpp  subfs.h  throttled-file.cpp  throttled-file.h  virtual-file.cpp  virtual-file.h  xfile.cpp  xfile.h
fs/extfs/test/: TARGETS
fs/httpfs/: auth_manager.cpp  auth_manager.h  httpfs.cpp  httpfs.h  httpfs_v2.cpp
fs/httpfs/test/: TARGETS  httpfs_perf.cpp  httpfs_ut.cpp  httpfs_v2_ut.cpp
fs/test/: CMakeLists.txt  TARGETS  mock.h  simplefuse.cpp  test.cpp  test_exportfs.cpp  test_filecopy.cpp  test_throttledfile.cpp
include/photon/fs/httpfs/: auth_manager.h
include/photon/io/: events_map.h
include/photon/thread/: vcpu_local.h
io/: aio-wrapper.cpp  aio-wrapper.h  epoll.cpp  events_map.h  fd-events.h  fstack-dpdk.cpp  fuse-adaptor.cpp  fuse-adaptor.h  iouring-wrapper.cpp  iouring-wrapper.h  kqueue.cpp  resettable_ee.cpp  resettable_ee.h  signal.cpp  signal.h  signalfd.cpp  signalfd.h  syncio.md
io/test/: CMakeLists.txt  TARGETS  signalfdboom.cpp  signalfdtest.cpp  test-fork.cpp  test-iouring.cpp  test-syncio.cpp
net/: abstract_socket.h  base_socket.h  basic_socket.cpp  basic_socket.h  curl.cpp  curl.h  datagram_socket.cpp  datagram_socket.h  etsocket.cpp  etsocket.h  kernel_socket.cpp  pooled_socket.cpp  socket.cpp  socket.h  socket.md  tlssocket.cpp  tlssocket.h  utils.cpp  utils.h  zerocopy.cpp  zerocopy.h
net/http/: body.cpp  client.cpp  client.h  cookie_jar.cpp  field.h  headers.cpp  headers.h  message.cpp  message.h  parser.h  server.cpp  server.h  url.cpp  url.h  verb.h
net/http/test/: CMakeLists.txt  TARGETS  client_function_test.cpp  client_perf.cpp  client_test.cpp  cookie_jar_test.cpp  fs_server.cpp  headers_test.cpp  perf.cpp  pure_libcurl.cpp  server.cpp  server_function_test.cpp  server_perf.cpp  server_test.cpp
net/mq/mns/: mns.cpp  mns.h
net/security-context/: sasl-stream.cpp  sasl-stream.h  tls-stream.cpp  tls-stream.h
net/security-context/test/: CMakeLists.txt  TARGETS  test-sasl.cpp  test.cpp
net/test/: CMakeLists.txt  TARGETS  test-client.cpp  test-server.cpp  test-udp.cpp  test.cpp  test_base64.cpp  test_curl.cpp  test_sockpool.cpp  zerocopy-client.cpp  zerocopy-common.h  zerocopy-server.cpp
rpc/: out-of-order-execution.cpp  out-of-order-execution.h  rpc.cpp  rpc.h  serialize.h
rpc/test/: CMakeLists.txt  TARGETS  test-ooo.cpp  test-rpc-message.cpp  test.cpp
rpc/test/example/: client.cpp  protocol.h  server.cpp
rpm/: t-storage-photon-build.sh  t-storage-photon.spec
test/: TARGETS
thread/: list.h  out-of-order-execution.h  stack-allocator.cpp  stack_allocator.cpp  std-compat.h  switch_context_x86_64.s  thread-local.h  thread-pool.cpp  thread-pool.h  thread.cpp  thread.h  thread.md  thread11.h  timer.h  vcpu_local.cpp  vcpu_local.h  workerpool.cpp  workerpool.h
thread/test/: CMakeLists.txt  TARGETS  perf-sleep.cpp  perf_spinlock.cpp  perf_usleep_interrupt.cpp  perf_usleepdefer_semaphore.cpp  perf_workpool.cpp  test-lib-data.cpp  test-specific-key.cpp  test-thread-local.cpp  test-tls-order-photon.cpp  test.cpp
tools/: TARGETS  export-header.py  publish.py
